Fix #6280